# LearnOpenglLessons

./: .gitignore  CMakeLists.txt
include/: camera.h  glad.h  main.h  mesh.h  model.h  shader.h  textOutput.h
libs/: assimp-vc140-mtd.lib  freetyped.lib  glfw3.lib
libs/MSVC/: assimp-vc140-mtd.lib  glfw3.lib
res/shaders/: background.fragment.shader  background.vertex.shader  bloom.fragment.shader  bloom.vertex.shader  blur.fragment.shader  brdf.fragment.shader  common.fragment.shader  common.vertex.shader  cubemap.vertex.shader  diffuse.fragment.shader  diffuse.vertex.shader  equirectangular_to_cubemap.fragment.shader  fps.fragment.shader  fps.vertex.shader  fragment.shader  fragment_red.shader  fragment_yellow.shader  geometry_pass.fragment.shader  geometry_pass.vertex.shader  grid.fragment.shader  height.fragment.shader  irradiance_convolution.fragment.shader  light.fragment.shader  light_box.fragment.shader  lighting_pass.fragment.shader  model.fragment.shader  model.vertex.shader  normal.geometry.shader  normal.vertex.shader  object.fragment.shader  object.vertex.shader  pbr.fragment.shader  pbr.vertex.shader  prefilter.fragment.shader  reflect.fragment.shader  simple.fragment.shader  simple.vertex.shader  specular.fragment.shader  ssao.fragment.shader  ssao_blur.fragment.shader  (+5 more)
src/: camera.cpp  glad.c  main.cpp  mesh.cpp  model.cpp  shader.cpp  textOutput.cpp
